<?xml version="1.0" encoding="UTF-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img"
    android:padding="20dp"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/b_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/start"/>

    <Button
        android:id="@+id/b_shop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="80dp"
        android:text="@string/shop"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/b_click"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/flower"
        android:drawableBottom="@drawable/flower"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:fontFamily="@font/bartex"
        android:text="@string/you_have_30_seconds"
        android:textColor="#802A74"
        android:textSize="20sp"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/tv_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="500dp"
        android:text="@string/record"
        android:textSize="18sp"
        android:textColor="#802A74"
        android:fontFamily="@font/bartex"/>


    <TextView
        android:id="@+id/tv_clicks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/b_click"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:fontFamily="@font/bartex"
        android:text="@string/click_the_flower"
        android:textColor="#802A74"
        android:textSize="20sp" />

</RelativeLayout>